<resources>
    <string name="app_name">MyPetFinder</string>
    <string name="notes">My Finder</string>
    <string name="notes_title">Pet Title</string>
    <string name="notes_sub_title">Telephone</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="add_image">Add Image</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>