<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.CreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:onClick="goBack"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/ColorIcons" />

            <ImageView
                android:id="@+id/imgDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/ic_tick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/ColorIcons" />

            <EditText
                android:id="@+id/inputPetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@null"
                android:ellipsize="end"
                android:fontFamily="@font/manrope_bold"
                android:hint="@string/notes_title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/ColorIcons"
                android:textColorHint="@color/ColorGray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBack" />
            
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:includeFontPadding="false"
                android:textColor="@color/ColorIcons"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/inputPetTitle"
                app:layout_constraintStart_toStartOf="@id/inputPetTitle"
                app:layout_constraintTop_toBottomOf="@id/inputPetTitle"/>

            <EditText
                android:id="@+id/inputTelephone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/notes_sub_title"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPetTitle"
                />

            <View
                android:id="@+id/colorView"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/ColorBlue"
                app:layout_constraintBottom_toBottomOf="@id/inputTelephone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputTelephone"
                />

            <EditText
                android:id="@+id/inputPetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@null"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/notes_desc"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputTelephone" />









        </androidx.constraintlayout.widget.ConstraintLayout>




        
    </ScrollView>


    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:layout_gravity="center|bottom">

        <ImageView
            android:id="@+id/imagePet"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/ColorIcons" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/manrope_regular"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/ColorIcons"
            android:textSize="@dimen/_12sdp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>